--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "npm run build",
+  "buildCommand": "npm ci --legacy-peer-deps && npm run build",
   "outputDirectory": "build",
   "installCommand": "npm install --legacy-peer-deps",
   "env":{
