--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
       },
       "scripts": {
             "dev": "vite",
-            "build": "vite build"
+            "build": "vite build",
+            "vercel-build": "node -e \"require('vite').build({root: process.cwd(), logLevel: 'warn'})\""
       }
 }
