--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "npx vite build",
+  "buildCommand": "npm run vercel-build",
   "outputDirectory": "build",
   "installCommand": "npm install --legacy-peer-deps",
   "env":{
