fix: Replace npm run build with custom Node.js build script for Vercel compatibility

--- a/package.json
+++ b/package.json
@@ -61,7 +61,6 @@
       },
       "scripts": {
             "dev": "vite",
-            "build": "vite build",
-            "vercel-build": "node -e \"require('vite').build({root: process.cwd(), logLevel: 'warn'})\""
+            "build": "node ./build.js"
       }
 }
